# ripclip

./: Cargo.toml  LICENSE-MIT  Readme.md  build.rs
ripclip/: Cargo.toml  build.rs
ripclip/src/: config.rs  main.rs
src/: config.rs  main.rs  win.rs
win/: Cargo.toml
win/src/: api.rs  hotkey.rs  lib.rs
x/: Cargo.toml
x/src/: hotkey.rs  lib.rs
