[package]
name = "ripclip"
version = "0.5.0"
authors = ["Richard McCormack <brick@brick.codes>"]
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DenialAdams/ripclip"
description = "Stack based clipboard replacement"
categories = ["command-line-utilities"]
keywords = ["clipboard", "stack"]
exclude = [
    "res/*",
]
edition = "2018"

[dependencies]
bitflags = "1"
dirs = "1"
log = "0.4"
pretty_env_logger = "0.3"
winapi = { version = "0.3", features = ["commctrl", "winuser", "errhandlingapi", "winbase", "shellapi", "windowsx"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
